--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,9 @@
     <string name="something_went_wrong_msg">Something went wrong.</string>
     <string name="action_discard">Action discarded.</string>
     <string name="error_invalid_password_id">Something Went Wrong: Invalid ID!!</string>
+<!--    <string name="import_success">Imported %1$d passwords</string> -->
+<!--    <string name="import_failed">Failed to import CSV</string> -->
+    <string name="export_success">Passwords exported</string>
 
     <!-- Alert Dialog Message -->
     <string name="copy_password_dialog_title">Copy to Clipboard?</string>
