--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,5 @@
     <string name="confirm_dialog_button_text">Confirm</string>
     <string name="discard_dialog_button_text">Discard</string>
     <string name="passcodes_logo">Passcodes Logo</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
