--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,23 +16,7 @@
     <string name="textview_app_warning">This app is currently under active development and is intended for educational and experimental purposes. It may not be secure for storing sensitive authentication information. Please review the security guidelines for more details.</string>
 
     <!-- Button, Textview general in all Activity -->
-    <string name="hint_domain">Domain</string>
-    <string name="helper_text_domain_field">The name of the website or domain associated</string>
-    <string name="hint_username">Username</string>
-    <string name="hint_password">Password</string>
-    <string name="hint_notes">Notes</string>
-    <string name="copy_success">Copied Successfully</string>
-    <string name="placeholder_domain_field">e.g. Google, Instagram, WhatsApp, etc.</string>
-    <string name="placeholder_username_field">e.g. Liam15, Noha, Olivia, Ava_25, etc.</string>
-    <string name="placeholder_password_field">e.g. 12345, abc123xyz, qwerty, etc.</string>
     <string name="password_manager_button_text">Password Manager</string>
-    <string name="copy_password_button_text">Copy Password</string>
-    <string name="save_password_button_text">Save Password</string>
-    <string name="load_password_button_text">Load Password</string>
-    <string name="update_password_button_text">Update Password</string>
-    <string name="delete_password_button_text">Delete Password</string>
-    <string name="import_password_button_text">Import G-Password</string>
-    <string name="export_password_button_text">Export G-Password</string>
     <string name="clear_all_data_button_text">Clear Data</string>
     <string name="password_security_check_button_text">Check Security</string>
     <string name="setting_button_text">Settings</string>
@@ -41,6 +25,8 @@
     <string name="label_contributor">Contributor: </string>
     <string name="label_theme_setting">Themes: </string>
     <string name="latest_feature">Preview Features: </string>
+    <string name="preview_layout">Preview Layout:</string>
+    <string name="autofill_settings">Autofill Settings</string>
     <string name="about_us_button_text">About Us</string>
 
     <!-- Hyper Text Link Buttons Text -->
@@ -52,26 +38,8 @@
     <string name="view_telegram_community_text">Passcodes Telegram Community</string>
 
     <!-- Headline of Activity -->
-    <string name="textview_passwordmanager_headline">Password Manager</string>
-    <string name="textview_loadpassword_headline">Load Password</string>
-    <string name="textview_savepassword_headline">Save Password</string>
-    <string name="textview_viewpassword_headline">View Password</string>
-    <string name="textview_updatepassword_headline">Update Password</string>
     <string name="textview_settings_headline">Settings</string>
     <string name="textview_aboutus_headline">About Us</string>
-
-    <!-- Prefix & Suffix -->
-    <string name="id_prefix">ID: </string>
-    <string name="domain_prefix">Domain: </string>
-    <string name="username_prefix">Username: </string>
-    <string name="password_prefix">Password: </string>
-    <string name="notes_prefix">Notes: </string>
-    <string name="createdat_prefix">Created At: </string>
-    <string name="updatedat_prefix">Last Updated: </string>
-
-    <!-- Permission -->
-    <string name="permission_granted">Permission granted</string>
-    <string name="permission_denied">Permission denied</string>
 
     <!-- Toast Message -->
     <string name="restart_app_require">Restart App Require.</string>
@@ -81,22 +49,9 @@
     <string name="warn_fill_form">Warning: Please fill out the form first.</string>
     <string name="fail_msg">Failed: Please try again.</string>
     <string name="success_clause">Success:</string>
-    <string name="update_success_msg">Updated successfully.</string>
-    <string name="delete_success_msg">Deleted successfully.</string>
     <string name="something_went_wrong_msg">Something went wrong.</string>
-    <string name="action_discard">Action discarded.</string>
     <string name="error_invalid_password_id">Something Went Wrong: Invalid ID!!</string>
-    <string name="import_success">Imported %1$d passwords</string>
-    <string name="import_failed">Failed to import %1$d passwords</string>
-    <string name="export_success">Passwords exported</string>
 
     <!-- Alert Dialog Message -->
-    <string name="copy_password_dialog_title">Copy to Clipboard?</string>
-    <string name="update_password_dialog_title">Update password?</string>
-    <string name="delete_password_dialog_title">Delete password?</string>
-    <string name="irreversible_dialog_desc">This action cannot be undone.</string>
-    <string name="danger_copy_to_clipboard_desc">Copying sensitive data like passwords to clipboard is not so good for security!!!</string>
-    <string name="confirm_dialog_button_text">Confirm</string>
-    <string name="discard_dialog_button_text">Discard</string>
     <string name="passcodes_logo">Passcodes Logo</string>
 </resources>
