--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
-    <string name="app_name">Passcodes</string>
-    <string name="app_version" translatable="false">v1.1.2-rc2</string>
+    <string name="app_name">Passcodes Latest</string>
+    <string name="app_version" translatable="false">v0.0.0 - Latest</string>
 
     <!-- Contributor Names -->
     <string name="developer_name">Developed by: Dobariya Jeel</string>
