--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -4,7 +4,7 @@
 
     <!-- Contributor Names -->
     <string name="developer_name">Dikembangkan oleh: Jeel Dobariya</string>
-    <string name="code_maintainer">Tester: Achmad Daniel (Kudanill)</string>
+    <string name="code_maintainer">Pemelihara kode &amp; Tester: Achmad Daniel (Kudanill)</string>
 
     <!-- Main Activity -->
     <!-- About Us Activity -->
